# telefax

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
.pi/tasks/: tasks-019e0803-dd27-7116-be3f-33788f664930.json
src/: config.rs  handlers.rs  history.rs  main.rs  print.rs
