[package]
name = "telefax"
version = "0.1.1"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
] }
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dotenvy = "0.15"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tempfile = "3"
bytes = "1"
reqwest = { version = "0.13.3", default-features = false, features = [
  "rustls",
] }

[dev-dependencies]
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
